--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Panda and Bunny</title>
-</head>
-<body>
-  <img src="bunny.jpeg" alt="bunny">
-</body>
-</html>
+<video width="320" height="240" controls>
+  <source src="bunny.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
